--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
   <!-- my CSS -->
-  <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
